Bring Detrak files

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/dices.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<title>Detrak</title>
+		<meta name="description" content="The Detrak dice game" />
+		<link rel="icon" type="image/svg+xml" href="/dices.svg" />
+
+		<meta property="og:title" content="Detrak" />
+		<meta property="og:description" content="The Detrak dice game" />
+		<meta property="og:image" content="/dices.svg" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 	<body>
 		<div id="root"></div>
