--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<meta property="og:title" content="Detrak" />
 		<meta property="og:description" content="The Detrak dice game" />
-		<meta property="og:image" content="/favicon-196.png" />
+		<meta property="og:image" content="favicon-196.png" />
 
 		<meta name="theme-color" content="#020817" />
 
