--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta property="og:description" content="The Detrak dice game" />
 		<meta property="og:image" content="favicon-196.png" />
 
-		<meta name="theme-color" content="#020817" />
+		<meta name="theme-color" content="#0f1c2e" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
