--- a/index.html
+++ b/index.html
@@ -186,6 +186,12 @@
 				document.documentElement.classList.add(theme);
 			}
 		</script>
+
+		<script
+			defer
+			data-domain="detrak.net"
+			src="https://plsbl.zwyx.dev/js/script.js"
+		></script>
 	</head>
 	<body>
 		<div id="root"></div>
