Improve theme management
Add a lot of JavaScript, which allows us to:
- make Tailwind's `dark:` selector work
- make the app always aware of which theme is currently used (difference between `themeChoice` and `themeScheme`)
- remove the requirement to repeat the variables for the dark theme

--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
 		/>
 
 		<script type="text/javascript">
-			// This script sets the CSS class for the theme as soon as possible
-			// to prevent a flash of the wrong theme
+			// Set the theme's class as soon as possible to prevent a flash of the wrong theme
 
 			var lightThemeName = "light";
 			var darkThemeName = "dark";
@@ -184,6 +183,10 @@
 
 			if (theme === lightThemeName || theme === darkThemeName) {
 				document.documentElement.classList.add(theme);
+			} else if (matchMedia("(prefers-color-scheme: dark)").matches) {
+				document.documentElement.classList.add(darkThemeName);
+			} else {
+				document.documentElement.classList.add(lightThemeName);
 			}
 		</script>
 
