--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -190,11 +190,7 @@
 			}
 		</script>
 
-		<script
-			defer
-			data-domain="detrak.net"
-			src="https://plsbl.zwyx.dev/js/script.js"
-		></script>
+		<script defer data-domain="$DOMAIN" src="$PLAUSIBLE_SCRIPT_SRC"></script>
 	</head>
 	<body>
 		<div id="root"></div>
