--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 			}
 		</script>
 
-		<script defer data-domain="$DOMAIN" src="$PLAUSIBLE_SCRIPT_SRC"></script>
+		<!-- $PLAUSIBLE_SCRIPT -->
 	</head>
 	<body>
 		<div id="root"></div>
