Prevent shift in header
Also rename Error component, and remove unnecessary `type` script prop.

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 			media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
 		/>
 
-		<script type="text/javascript">
+		<script>
 			// Set the theme's class as soon as possible to prevent a flash of the wrong theme
 
 			var lightThemeName = "light";
