Fix open graph image
it must contain an absolute url

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 		<meta property="og:title" content="Detrak" />
 		<meta property="og:description" content="The Detrak dice game" />
-		<meta property="og:image" content="favicon-196.png" />
+		<meta
+			property="og:image"
+			content="https://$DOMAIN/en-light-landscape.webp"
+		/>
 
 		<meta name="theme-color" content="#0f1c2e" />
 
